--- a/app/Presenters/templates/Vyhledani/show.latte
+++ b/app/Presenters/templates/Vyhledani/show.latte
@@ -1,9 +1,7 @@
-{* This is the welcome page, you can delete it *}
-
-{block content}
-	<h1 n:block="title">Homepage</h1>
-	<a href="{link Vyhledani:show null}">Vyhledavani</a>
-	{foreach $knihy as $kniha}
+<h2>zdarec</h2>
+{control vyhledaniForm}
+{if $knihy}
+{foreach $knihy as $kniha}
 	<div class="kniha">
 		<h2><a href="{link Kniha:show $kniha->ID}">{$kniha->nazev}</a></h2>
 		<div class="date">{$kniha->datumVydani|date:'F j, Y'}</div>
@@ -12,5 +10,5 @@
 
 		<div>{$kniha->popis|truncate:256}</div>
 	</div>
-	{/foreach}
-{/block}
+{/foreach}
+{/if}
