--- a/app/Presenters/templates/Vyhledani/show.latte
+++ b/app/Presenters/templates/Vyhledani/show.latte
@@ -1,14 +1,15 @@
-<h2>zdarec</h2>
-{control vyhledaniForm}
-{if $knihy}
-{foreach $knihy as $kniha}
-	<div class="kniha">
-		<h2><a href="{link Kniha:show $kniha->ID}">{$kniha->nazev}</a></h2>
-		<div class="date">{$kniha->datumVydani|date:'F j, Y'}</div>
+{block content}
+	{control vyhledaniForm}
+	{if $knihy}
+	{foreach $knihy as $kniha}
+		<div class="kniha">
+			<h2><a href="{link Kniha:show $kniha->ID}">{$kniha->nazev}</a></h2>
+			<div class="date">{$kniha->datumVydani|date:'F j, Y'}</div>
 
-		<h2>{$kniha->nazev}</h2>
+			<h2>{$kniha->nazev}</h2>
 
-		<div>{$kniha->popis|truncate:256}</div>
-	</div>
-{/foreach}
-{/if}
+			<div>{$kniha->popis|truncate:256}</div>
+		</div>
+	{/foreach}
+	{/if}
+{/block content}
