--- a/app/Presenters/templates/Kniha/show.latte
+++ b/app/Presenters/templates/Kniha/show.latte
@@ -1,11 +1,12 @@
 {block content}
 
-<p><a n:href="Homepage:default">← zpět na výpis příspěvků</a></p>
+<h1 n:block="title">{$kniha->nazev}</h1>
 
 <div class="popis">{$kniha->popis}</div>
 
+<h2>Podrobnosti</h2>
 <div class="Datum vydání">{$kniha->datumVydani|date:'F j, Y'}</div>
 
-<h1 n:block="title">{$kniha->nazev}</h1>
+
 
 {/block}
