--- a/app/Presenters/templates/Layout/Navigation.latte
+++ b/app/Presenters/templates/Layout/Navigation.latte
@@ -2,7 +2,6 @@
 <nav>
 <p><a n:href="Homepage:default">Domovská stránka</a></p>
 <p><a n:href="Vyhledani:show">Vyhledávaní</a></p>
-<p><a n:href="SignIn:show">Přihlášení</a></p>
-<p><a n:href="Homepage:default">← zpět na výpis příspěvků</a></p>
+<p><a n:href="Autetification:SignIn:SignIn">Přihlášení</a></p>
 </nav>
 {/block Navigation}
