--- a/app/CoreModule/Presenters/templates/Layout/Navigation.latte
+++ b/app/CoreModule/Presenters/templates/Layout/Navigation.latte
@@ -1,8 +1,13 @@
 {block Navigation}
+<div id="navigace">
 <nav>
-<p><a n:href=":Core:Homepage:">Domovská stránka</a></p>
-<p><a n:href=":Core:Vyhledani:">Vyhledávaní</a></p>
-<p><a n:href=":Login:SignIn:">Přihlášení</a></p>
-<p><a n:href=":Login:SignUp:">Registrace</a></p>
+    <ul>
+        <li><a n:href=":Core:Homepage:">Domovská stránka</a></li>
+        <li><a n:href=":Core:Vyhledani:">Vyhledávaní</a></li>
+        <li><a n:href=":Login:SignIn:">Přihlášení</a></li>
+        <li><a n:href=":Login:SignUp:">Registrace</a></li>
+        <li><a n:href=":Admin:UsersAdmin:">Správa uživatelů</a></li>
+    </ul>
 </nav>
+</div>
 {/block Navigation}
