--- a/app/CoreModule/Presenters/templates/Layout/Navigation.latte
+++ b/app/CoreModule/Presenters/templates/Layout/Navigation.latte
@@ -3,7 +3,7 @@
 <nav>
     <ul>
         <li><a n:href=":Core:Homepage:">Domovská stránka</a></li>
-        <li><a n:href=":Core:Vyhledani:">Vyhledávaní</a></li>
+        <li><a n:href=":Book:Vyhledani:">Vyhledávaní</a></li>
         <li><a n:href=":Login:SignIn:">Přihlášení</a></li>
         <li><a n:href=":Login:SignUp:">Registrace</a></li>
         {if $user->isAllowed('AdminPage')}<li><a n:href=":Admin:UsersAdmin:">Správa uživatelů</a></li>{/if}
