--- a/app/CoreModule/Presenters/templates/Layout/Navigation.latte
+++ b/app/CoreModule/Presenters/templates/Layout/Navigation.latte
@@ -4,8 +4,9 @@
     <ul>
         <li><a n:href=":Core:Homepage:">Domovská stránka</a></li>
         <li><a n:href=":Book:Vyhledani:">Vyhledávaní</a></li>
-        <li><a n:href=":Login:SignIn:">Přihlášení</a></li>
-        <li><a n:href=":Login:SignUp:">Registrace</a></li>
+        {if !$user->isLoggedIn()}<li><a n:href=":Login:SignIn:">Přihlášení</a></li>{/if}
+        {if !$user->isLoggedIn()}<li><a n:href=":Login:SignUp:">Registrace</a></li>{/if}
+        {if $user->isLoggedIn()}<li><a n:href="logout!">Odhlášení</a></li>{/if}
         {if $user->isLoggedIn()}<li><a n:href=":User:UserEdit:">Profil</a></li>{/if}
         {if $user->isAllowed('AdminPage')}<li><a n:href=":Admin:UsersAdmin:">Správa uživatelů</a></li>{/if}
     </ul>
