--- a/app/CoreModule/Presenters/templates/Layout/Navigation.latte
+++ b/app/CoreModule/Presenters/templates/Layout/Navigation.latte
@@ -8,6 +8,7 @@
         {if !$user->isLoggedIn()}<li><a n:href=":Login:SignUp:">Registrace</a></li>{/if}
         {if $user->isLoggedIn()}<li><a n:href="logout!">Odhlášení</a></li>{/if}
         {if $user->isLoggedIn()}<li><a n:href=":User:UserEdit:">Profil</a></li>{/if}
+        {if $user->isAllowed('Knihovna')}<li><a n:href=":Library:LibraryDashBoard:">Spravované knihovny</a></li>{/if}
         {if $user->isAllowed('AdminPage')}<li><a n:href=":Admin:UsersAdmin:">Správa uživatelů</a></li>{/if}
     </ul>
 </nav>
