--- a/app/BookModule/Presenters/templates/Kniha/show.latte
+++ b/app/BookModule/Presenters/templates/Kniha/show.latte
@@ -1,12 +1,14 @@
 {block content}
-
-<h1 n:block="title">{$kniha->nazev}</h1>
+{if $user->isAllowed('Knihovna')}<a href="{link BookEdit: $kniha->ID}">Editovat</a>{/if}
+<h1 n:block="title">{$kniha->ID}</h1>
 
 <div class="popis">{$kniha->popis}</div>
 
-<h2>Podrobnosti</h2>
+<h2>Podrobnosti:</h2>
+<p>Vydavatelství: {$kniha->vydavatelstvo}</p>
 <div class="Datum vydání">{$kniha->datumVydani|date:'F j, Y'}</div>
-
+<p>Žánry: {$kniha->zanry}</p>
+<p>Tagy: {$kniha->tagy}</p>
 
 
 {/block}
