--- a/app/CoreModule/Presenters/templates/Layout/Navigation.latte
+++ b/app/CoreModule/Presenters/templates/Layout/Navigation.latte
@@ -3,7 +3,8 @@
 <nav>
     <ul>
         <li><a n:href=":Core:Homepage:">Domovská stránka</a></li>
-        <li><a n:href=":Book:Vyhledani:">Vyhledávaní</a></li>
+        {if !$user->isAllowed('Knihovna')}<li><a n:href=":Book:Vyhledani: null">Knihy</a></li>{/if}
+        {if $user->isAllowed('Knihovna')}<li><a n:href=":Book:Vyhledani: null">Knihy/Správa knih</a></li>{/if}
         {if !$user->isLoggedIn()}<li><a n:href=":Login:SignIn:">Přihlášení</a></li>{/if}
         {if !$user->isLoggedIn()}<li><a n:href=":Login:SignUp:">Registrace</a></li>{/if}
         {if $user->isLoggedIn()}<li><a n:href="logout!">Odhlášení</a></li>{/if}
