--- a/app/BookModule/Presenters/templates/BookAdd.default.latte
+++ b/app/BookModule/Presenters/templates/BookAdd.default.latte
@@ -1,4 +1,5 @@
 {block content}
     <h1>Přidat knižní titul</h1>
+    <p>Upozornění název knihy po vytvoření nelze měnit</p>
 	{control bookAddForm}
 {/block content}
