--- a/app/CoreModule/Presenters/templates/Layout/Navigation.latte
+++ b/app/CoreModule/Presenters/templates/Layout/Navigation.latte
@@ -3,13 +3,14 @@
 <nav>
     <ul>
         <li><a n:href=":Core:Homepage:">Domovská stránka</a></li>
-        {if !$user->isAllowed('Knihovna')}<li><a n:href=":Book:Vyhledani: null">Knihy</a></li>{/if}
-        {if $user->isAllowed('Knihovna')}<li><a n:href=":Book:Vyhledani: null">Knihy/Správa knih</a></li>{/if}
+        {if !$user->isAllowed('Knihy')}<li><a n:href=":Book:Vyhledani: null">Knihy</a></li>{/if}
+        {if $user->isAllowed('Knihy')}<li><a n:href=":Book:Vyhledani: null">Knihy/Správa knih</a></li>{/if}
         {if !$user->isLoggedIn()}<li><a n:href=":Login:SignIn:">Přihlášení</a></li>{/if}
         {if !$user->isLoggedIn()}<li><a n:href=":Login:SignUp:">Registrace</a></li>{/if}
         {if $user->isLoggedIn()}<li><a n:href="logout!">Odhlášení</a></li>{/if}
         {if $user->isLoggedIn()}<li><a n:href=":User:UserEdit:">Profil</a></li>{/if}
         {if $user->isAllowed('Knihovna')}<li><a n:href=":Library:LibraryDashBoard:">Spravované knihovny</a></li>{/if}
+        {if $user->isAllowed('OrdersDView')}<li><a n:href=":Order:OrderDView:">Objednávky ke spracování</a></li>{/if}
         {if $user->isAllowed('AdminPage')}<li><a n:href=":Admin:UsersAdmin:">Správa uživatelů</a></li>{/if}
     </ul>
 </nav>
