--- a/app/LibraryModule/Presenters/templates/LibraryEdit.default.latte
+++ b/app/LibraryModule/Presenters/templates/LibraryEdit.default.latte
@@ -1,4 +1,5 @@
 {block content}
+	<a n:href=":Library:LibraryDashBoard: ">zpet</a>
 	<h1>Editace knihovny: {$knihovna->ID}</h1>
 	{control libraryEditForm }
 
