--- a/app/BookTransactionModule/Presenters/templates/LibBookManualEdit.default.latte
+++ b/app/BookTransactionModule/Presenters/templates/LibBookManualEdit.default.latte
@@ -1,4 +1,5 @@
 {block content}
+    <a n:href="LibBooks: $poskytuje->ID_knihovna">zpet</a>
     <h1>Editovat počet titulů: "{$poskytuje->ID_titul}" v knihovně: {$poskytuje->ID_knihovna} </h1>
     <p>Varování: záznam se odstraní po návratu všech knih</p>
     {control bookEditForm }
