--- a/app/BookTransactionModule/Presenters/templates/LibBooks.default.latte
+++ b/app/BookTransactionModule/Presenters/templates/LibBooks.default.latte
@@ -1,4 +1,5 @@
 {block content}
+	<a n:href=":Library:Library:  $libName">zpet</a>
 	<h1>Knihy v knihovně:{$libName}</h1>
 	<a n:href="LibBookManualAdd: $libName">Přidat titul manuálně do knihovny</a>
 	<table>
