--- a/app/BookTransactionModule/Presenters/templates/LibBooks.default.latte
+++ b/app/BookTransactionModule/Presenters/templates/LibBooks.default.latte
@@ -1,7 +1,9 @@
 {block content}
 	<a n:href=":Library:Library:  $libName">zpet</a>
 	<h1>Knihy v knihovně:{$libName}</h1>
+	<a n:href=':Order:Orders: $libName'>Přehled objednávek</a>
 	<a n:href="LibBookManualAdd: $libName">Přidat titul manuálně do knihovny</a>
+
 	<table>
 	<tr>
 		<th>Jméno titulu</th>
