--- a/app/LibraryModule/Presenters/templates/LibraryDashBoard.default.latte
+++ b/app/LibraryModule/Presenters/templates/LibraryDashBoard.default.latte
@@ -1,5 +1,5 @@
 {block content}
-	<h1>Správa knihoven</h1>
+	<h1>Správa knihoven</p>
 	{if $user->isAllowed('AdminPage')}<li><a n:href=":Library:LibraryAdd:">Přidat knihovnu</a></li>{/if}
 	{if $knihovny}
 		<ol>
