--- a/app/AdminModule/Presenters/templates/UserAdmEdit.default.latte
+++ b/app/AdminModule/Presenters/templates/UserAdmEdit.default.latte
@@ -1,4 +1,5 @@
 {block content}
+	<a n:href=":Admin:UsersAdmin: ">Zpět</a>
 	<h1>Editace uživatele: {$name}</h1>
 	{control admEditProfileForm }
 {/block}
