--- a/app/BorrowingModule/Presenters/templates/UserBorrows.default.latte
+++ b/app/BorrowingModule/Presenters/templates/UserBorrows.default.latte
@@ -16,7 +16,7 @@
 			<td>{$vypujcka->stav} </td>
 			<td>{$vypujcka->ID_knihovna} </td>
 			<td>{$vypujcka->datum_vydano} </td>
-			<td>nutno vráti do </td>
+			<td>{if $vypujcka->datum_vydano }{$vypujcka->datum_vydano->modifyClone('+'.(($vypujcka->prodlouzeni+1)*14).' day')}{/if} </td>
 			<td><a n:href="Borrow: $vypujcka->ID">Detaily</a></td>
 
 		</tr>
