--- a/app/AdminModule/Presenters/templates/UserAdmCreate.default.latte
+++ b/app/AdminModule/Presenters/templates/UserAdmCreate.default.latte
@@ -1,4 +1,5 @@
 {block content}
+	<a n:href=":Admin:UsersAdmin: ">Zpět</a>
 	<h1>Vytváření uživatele</h1>
 	{control admCreateProfileForm }
 {/block}
