--- a/app/BookModule/Presenters/templates/Vyhledani.default.latte
+++ b/app/BookModule/Presenters/templates/Vyhledani.default.latte
@@ -1,5 +1,6 @@
 {block content}
 	{if $user->isAllowed('Knihy')}<a href="{link BookAdd: }">Vytvořit nový titul</a>{/if}
+	<h1>Vyhledávání knih</h1>
 	{control vyhledaniForm}
 	{if $knihy}
 	{foreach $knihy as $kniha}
