--- a/app/BorrowingModule/Presenters/templates/UserBorrows.default.latte
+++ b/app/BorrowingModule/Presenters/templates/UserBorrows.default.latte
@@ -12,9 +12,9 @@
 	</tr>
     {foreach $vypujcky as $vypujcka}
 		<tr>
-			<td>{$vypujcka->ID_titul} </td>
+			<td><a href="{link :Book:Kniha:show $vypujcka->ID_titul}">{$vypujcka->ID_titul}</a></td>
 			<td>{$vypujcka->stav} </td>
-			<td>{$vypujcka->ID_knihovna} </td>
+			<td><a href="{link :Library:ViewLibrary: $vypujcka->ID_knihovna}">{$vypujcka->ID_knihovna}</a></td>
 			<td>{$vypujcka->datum_vydano} </td>
 			<td>{if $vypujcka->datum_vydano }{$vypujcka->datum_vydano->modifyClone('+'.(($vypujcka->prodlouzeni+1)*14).' day')}{/if} </td>
 			<td><a n:href="Borrow: $vypujcka->ID">Detaily</a></td>
