--- a/app/OrderModule/Presenters/templates/Orders.default.latte
+++ b/app/OrderModule/Presenters/templates/Orders.default.latte
@@ -10,15 +10,17 @@
     <th>ID</th>
     <th>Stav</th>
     <th>Datum založení</th>
+    <th>Náhled</th>
 </tr>
     {foreach $orders as $order}
     <tr>
-        <td>{if $order->stav=="vytvořena"}<a n:href="OrderEdit: $order->ID">{$order->ID}</a>
-            {else}<a n:href="Order: $order->ID">{$order->ID}</a>{/if}
-        
-        </td>
+        <td>{$order->ID} </td>
         <td>{$order->stav}</td>
         <td>{$order->datum_zalozenia}</td>
+        <td>
+            {if $order->stav=="vytvořena"}<a n:href="OrderEdit: $order->ID">Editovat</a>
+            {else}<a n:href="Order: $order->ID">Zobrazit</a>{/if}        
+        </td>
     </tr>
     {/foreach}
 </table>
