--- a/app/BorrowingModule/Presenters/templates/Borrow.default.latte
+++ b/app/BorrowingModule/Presenters/templates/Borrow.default.latte
@@ -2,9 +2,9 @@
 {if $user->isAllowed('UserBorrow')}<a n:href="UserBorrows: ">Zpět na výpůjčky</a>{/if}
 {if $user->isAllowed('KnihovnikBorrow')}<a n:href="KnihovnikBorrows: $vypujcka->ID_knihovna">Zpět do správy rezervací</a>{/if}
 	<h1>Výpůjčka id: {$vypujcka->ID}</h1>
-	<p>Titul: {$vypujcka->ID_titul}</p>
+	<p>Titul: <a href="{link :Book:Kniha:show $vypujcka->ID_titul}">{$vypujcka->ID_titul}</a></p>
 	<p>Stav: {$vypujcka->stav}</p>
-	<p>Knihovna: {$vypujcka->ID_knihovna}</p>
+	<p>Knihovna: <a href="{link :Library:ViewLibrary: $vypujcka->ID_knihovna}">{$vypujcka->ID_knihovna}</a></p>
 	<p>Datum vystavení: {$vypujcka->datum_vytvoreno}</p>
 	<p>Datum vydani: {$vypujcka->datum_vydano}</p>
 	<p>Datum vrácení: {$vypujcka->datum_vraceno}</p>
