--- a/app/LoginModule/Presenters/templates/SignIn.default.latte
+++ b/app/LoginModule/Presenters/templates/SignIn.default.latte
@@ -1,4 +1,5 @@
 {block content}
-<h2>SignIn</h2>
+<h1>Příhlásit se</h1>
 {control signInForm}
+<a href="{link :Login:SignUp:}">Založit účet</a>
 {/block content}
