--- a/app/BookTransactionModule/Presenters/templates/LibBookManualAdd.default.latte
+++ b/app/BookTransactionModule/Presenters/templates/LibBookManualAdd.default.latte
@@ -1,5 +1,5 @@
 {block content}
-    <a n:href="LibBooks:  $libName">zpet</a>
+    <a n:href="LibBooks:  $libName">Zpět</a>
     <h1>Přidat titul do knihovny {$libName}</h1>
     {control bookAddForm }
 {/block}
