--- a/app/BookTransactionModule/Presenters/templates/LibBooks.default.latte
+++ b/app/BookTransactionModule/Presenters/templates/LibBooks.default.latte
@@ -1,5 +1,5 @@
 {block content}
-	<a n:href=":Library:Library:  $libName">zpet</a>
+	<a n:href=":Library:Library:  $libName">Zpět</a>
 	<h1>Knihy v knihovně:{$libName}</h1>
 	<a n:href=':Order:Orders: $libName'>Přehled objednávek</a>
 	<a n:href="LibBookManualAdd: $libName">Přidat titul manuálně do knihovny</a>
